slightly decreased content h2 margin-top to fix whitespace issue for h2s under h1s
svn path=/branches/design/; revision=18440

--- a/look/generic.css
+++ b/look/generic.css
@@ -254,7 +254,7 @@ ol {
 }
 
 #content h2 {
-  margin-top: 2em;
+  margin-top: 1.5em;
 }
 
 #content h3 {
